--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "@remix-run/node": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
+    "@types/three": "^0.171.0",
     "isbot": "^4.1.0",
+    "jotai": "^2.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.171.0",
+    "three-custom-shader-material": "^6.2.1",
+    "three-stdlib": "^2.35.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.1",
@@ -35,6 +42,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
+    "vite-plugin-glsl": "^1.3.1",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
