--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@remix-run/react": "^2.15.1",
     "@remix-run/serve": "^2.15.1",
     "@types/three": "^0.171.0",
+    "framer-motion-3d": "^11.15.0",
     "isbot": "^4.1.0",
     "jotai": "^2.11.0",
+    "motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.171.0",
